[project]
name = "pytask"
description = "pytask is a workflow management system that facilitates reproducible data analyses."
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
]
dynamic = ["version"]
dependencies = [
    "attrs>=21.3.0",
    "click>=8.1.8,!=8.2.0",
    "click-default-group>=1.2.4",
    "networkx>=2.4.0",
    "optree>=0.9.0",
    "packaging>=23.0.0",
    "pluggy>=1.3.0",
    "rich>=13.8.0",
    "sqlalchemy>=2.0.31",
    'tomli>=1; python_version < "3.11"',
    'typing-extensions>=4.8.0; python_version < "3.11"',
    "universal-pathlib>=0.2.2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[dependency-groups]
dev = ["pygraphviz>=1.11;platform_system=='Linux'"]
docs = [
    "furo>=2024.8.6",
    "ipython>=8.13.2",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.5.0",
    "myst-parser>=3.0.0",
    "myst-nb>=1.2.0",
    "sphinx>=7.0.0",
    "sphinx-click>=6.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.3",
    "sphinx-toolbox>=4.0.0",
    "sphinxext-opengraph>=0.10.0",
    "sphinx-autobuild>=2024.10.3",
]
plugin-list = ["httpx>=0.27.0", "tabulate[widechars]>=0.9.0", "tqdm>=4.66.3"]
test = [
    "deepdiff>=7.0.0",
    "nbmake>=1.5.5",
    "pygments>=2.18.0",
    "pexpect>=4.9.0",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "syrupy>=4.5.0",
    "aiohttp>=3.11.0",      # For HTTPPath tests.
    "coiled>=1.42.0",
    "cloudpickle>=3.0.0",
]
typing = ["mypy>=1.9.0,<1.11", "nbqa>=1.8.5"]

[project.urls]
Changelog = "https://pytask-dev.readthedocs.io/en/stable/changes.html"
Documentation = "https://pytask-dev.readthedocs.io/en/stable"
Github = "https://github.com/pytask-dev/pytask"
Homepage = "https://pytask-dev.readthedocs.io/en/stable"
Tracker = "https://github.com/pytask-dev/pytask/issues"

[project.scripts]
pytask = "pytask:cli"

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/_pytask/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
fix = true
unsafe-fixes = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # flake8-annotate typing.Any
    "COM812", # Comply with ruff-format.
    "ISC001", # Comply with ruff-format.
    "FBT",
    "PD901",  # Avoid generic df for dataframes.
    "S101",   # raise errors for asserts.
    "S603",   # Call check with subprocess.run.
    "S607",   # Call subprocess.run with partial executable path.
    "SLF001", # access private members.
]

[tool.ruff.lint.per-file-ignores]
"src/_pytask/_hashlib.py" = ["ALL"]
"src/_pytask/capture.py" = ["PGH003"]
"src/_pytask/hookspecs.py" = ["ARG001"]
"src/_pytask/outcomes.py" = ["N818"]
"src/_pytask/dag.py" = ["B023"]
"tests/test_capture.py" = ["T201", "PT011"]
"tests/*" = ["ANN", "D", "FBT", "PLR2004", "S101"]
"tests/test_jupyter/*" = ["INP001"]
"scripts/*" = ["D", "INP001"]
"docs/source/conf.py" = ["D401", "INP001"]
"docs_src/*" = ["ARG001", "D", "INP001", "S301"]
"docs_src/*/*.py" = ["FA100", "FA102", "PLR2004", "TC"]
"docs/source/how_to_guides/functional_interface*" = [
    "B018",
    "D",
    "INP",
    "ARG005",
]
"docs_src/how_to_guides/using_task_returns_*_task.py" = ["ARG005", "E731"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
filterwarnings = [
    "ignore:'@pytask.mark.*. is deprecated:FutureWarning",
    "ignore:The --rsyncdir command line argument:DeprecationWarning",
]

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["click_default_group", "networkx"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["_pytask.coiled_utils"]
disable_error_code = ["import-not-found"]

[[tool.mypy.overrides]]
module = ["_pytask.hookspecs"]
disable_error_code = ["empty-body"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING.*:",
    "\\.\\.\\.",
    "def __repr__",
]

[tool.mdformat]
wrap = 88
end_of_line = "keep"
