[project]
name = "pytask"
description = "pytask is a workflow management system that facilitates reproducible data analyses."
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
]
dynamic = ["version"]
dependencies = [
    "attrs>=21.3.0",
    "click>=8.1.8,!=8.2.0",
    "click-default-group>=1.2.4",
    "networkx>=2.4.0",
    "optree>=0.9.0",
    "packaging>=23.0.0",
    "pluggy>=1.3.0",
    "rich>=13.8.0",
    "sqlalchemy>=2.0.31",
    'tomli>=1; python_version < "3.11"',
    'typing-extensions>=4.8.0; python_version < "3.11"',
    "universal-pathlib>=0.2.2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "ipython>=8.13.2",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.5.0",
    "myst-parser>=3.0.0",
    "myst-nb>=1.2.0",
    "sphinx>=7.0.0",
    "sphinx-click>=6.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.3",
    "sphinx-toolbox>=4.0.0",
    "sphinxext-opengraph>=0.10.0",
    "sphinx-autobuild>=2024.10.3",
]
plugin-list = ["httpx>=0.27.0", "tabulate[widechars]>=0.9.0", "tqdm>=4.66.3"]
test = [
    "cloudpickle>=3.0.0",
    "deepdiff>=7.0.0",
    # nbmake requires pywin32 on Windows, which has no wheels for Python 3.14 yet
    "nbmake>=1.5.5; platform_system != 'Windows' or python_version < '3.14'",
    "pygments>=2.18.0",
    "pexpect>=4.9.0",
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "syrupy>=4.5.0",
    "aiohttp>=3.11.0",                                                        # For HTTPPath tests.
    "coiled>=1.42.0",
    "pygraphviz>=1.12;platform_system=='Linux'",
]
typing = ["ty>=0.0.7"]

[project.urls]
Changelog = "https://pytask-dev.readthedocs.io/en/stable/changes.html"
Documentation = "https://pytask-dev.readthedocs.io/en/stable"
Github = "https://github.com/pytask-dev/pytask"
Homepage = "https://pytask-dev.readthedocs.io/en/stable"
Tracker = "https://github.com/pytask-dev/pytask/issues"

[project.scripts]
pytask = "pytask:cli"

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/_pytask/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
fix = true
unsafe-fixes = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # flake8-annotate typing.Any
    "COM812", # Comply with ruff-format.
    "ISC001", # Comply with ruff-format.
    "FBT",
    "S101",   # raise errors for asserts.
    "S603",   # Call check with subprocess.run.
    "S607",   # Call subprocess.run with partial executable path.
    "SLF001", # access private members.
]

[tool.ruff.lint.per-file-ignores]
"src/_pytask/_hashlib.py" = ["ALL"]
"src/_pytask/capture.py" = ["PGH003"]
"src/_pytask/hookspecs.py" = ["ARG001"]
"src/_pytask/outcomes.py" = ["N818"]
"src/_pytask/dag.py" = ["B023"]
"tests/test_capture.py" = ["T201", "PT011"]
"tests/*" = ["ANN", "D", "FBT", "PLR2004", "S101"]
"tests/test_jupyter/*" = ["INP001"]
"scripts/*" = ["D", "INP001"]
"docs/source/conf.py" = ["D401", "INP001"]
"docs_src/*" = ["ARG001", "D", "INP001", "S301"]
"docs_src/*/*.py" = ["FA100", "FA102", "PLR2004", "TC"]
"docs/source/how_to_guides/functional_interface*" = [
    "B018",
    "D",
    "INP",
    "ARG005",
]
"docs_src/how_to_guides/using_task_returns_*_task.py" = ["ARG005", "E731"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
filterwarnings = [
    "ignore:'@pytask.mark.*. is deprecated:FutureWarning",
    "ignore:The --rsyncdir command line argument:DeprecationWarning",
    "ignore:'asyncio\\..*' is deprecated:DeprecationWarning",
]

[tool.ty.rules]
unused-ignore-comment = "error"

[[tool.ty.overrides]]
include = [
    "src/_pytask/_version.py",
    "src/_pytask/click.py",
    "src/_pytask/dag_command.py",
]

[tool.ty.overrides.rules]
unused-ignore-comment = "ignore"

[tool.ty.src]
exclude = ["src/_pytask/_hashlib.py"]

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING.*:",
    "\\.\\.\\.",
    "def __repr__",
]

[tool.mdformat]
wrap = 88
end_of_line = "keep"
