[metadata]
name = pytask
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pytask-dev.readthedocs.io/en/latest
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools

[options]
packages = find:
install_requires =
    attrs>=17.4.0
    click
    click-default-group
    networkx
    pluggy
    pony>=0.7.13
    rich
python_requires = >=3.6.1
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pytask=_pytask.cli:cli

[check-manifest]
ignore =
    src/_pytask/_version.py
