[metadata]
name = pytask
description = In its highest aspirations, pytask tries to be pytest as a build system.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pytask-dev.readthedocs.io/en/latest
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
project_urls =
    Changelog = https://pytask-dev.readthedocs.io/en/latest/changes.html
    Documentation = https://pytask-dev.readthedocs.io/en/latest
    Github = https://github.com/pytask-dev/pytask
    Tracker = https://github.com/pytask-dev/pytask/issues

[options]
packages = find:
install_requires =
    attrs>=17.4.0
    click
    click-default-group
    networkx>=2.4
    packaging
    pluggy
    pony>=0.7.13
    rich
python_requires = >=3.6.1
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pytask=_pytask.cli:cli

[check-manifest]
ignore =
    src/_pytask/_version.py

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
