[metadata]
name = pytask
description = In its highest aspirations, pytask tries to be pytest as a build system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pytask-dev.readthedocs.io/en/stable
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
project_urls =
    Changelog = https://pytask-dev.readthedocs.io/en/stable/changes.html
    Documentation = https://pytask-dev.readthedocs.io/en/stable
    Github = https://github.com/pytask-dev/pytask
    Tracker = https://github.com/pytask-dev/pytask/issues

[options]
packages = find:
install_requires =
    attrs>=21.3.0
    click
    click-default-group
    networkx>=2.4
    packaging
    pluggy
    pybaum>=0.1.1
    rich
    sqlalchemy>=1.4.36
    tomli>=1.0.0
    typing-extensions
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pytask=_pytask.cli:cli

[check-manifest]
ignore =
    src/_pytask/_version.py
